Fix up full-details z-index
Want this on top of the layers control but under the attribution.

--- a/src/styles/map-styles.css
+++ b/src/styles/map-styles.css
@@ -28,6 +28,10 @@
     cursor: pointer;
   }
 
+  .leaflet-bottom {
+    z-index: 1002 !important;
+  }
+
   .full-details {
     background: white;
     border-radius: 0;
@@ -44,7 +48,7 @@
     right: 0 !important;
     transform: translateY(100%);
     transition: transform 0.3s ease-in-out, opacity 0.3s ease;
-    z-index: 1200;
+    z-index: 1000;
 
     &.show {
       opacity: 1;
@@ -98,7 +102,6 @@
       right: 0 !important;
       transform: translateX(100%);
       width: clamp(250px, 400px, 40vw);
-      z-index: 700;
 
       &.show {
         transform: translateX(0);
